kelas kubernetes/02. kubernetes kelas lanjut/nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: nginx:alpine
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-lb
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
    - port: 8080
      targetPort: 80
