kelas kubernetes/02. kubernetes kelas lanjut/https-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-raw
spec:
  selector:
    matchLabels:
      app: nginx-raw
  template:
    metadata:
      labels:
        app: nginx-raw
    spec:
      containers:
        - name: nginx-raw
          image: nginx:alpine
          resources:
            limits:
              memory: "10Mi"
              cpu: "10m"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-raw
spec:
  selector:
    app: nginx-raw
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-geprek-milenial
  labels:
    name: ingress-geprek-milenial
  annotations:
    # tiap cloud provider ada caranya masing-masing agar ingress dapat bekerja
    # biasanya menggunakan annotations
    # annotations dibawah ini jika kita menggunakan GKE (Google Kubernetes Engine)
    kubernetes.io/ingress.class: gce # https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#controller_summary
    kubernetes.io/ingress.allow-http: "false" #https://cloud.google.com/kubernetes-engine/docs/concepts/ingress-xlb#disabling_http
spec:
  # tls: # konfigurasi HTTPS
  #   - hosts:
  #     - geprek-milenial.xyz
  #     secretName: tls-geprek-milenial # nama object secret TLS yang dibuat
  rules:
    - host: oke.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-raw
                port:
                  number: 80
